--- a/templates/index.html
+++ b/templates/index.html
@@ -2,57 +2,35 @@
 <html>
 
 <head>
-	<title>水量監控系統</title>
+	<title>房地產搜尋系統</title>
 	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" href="assets/css/main.css" />
-	<noscript>
-		<link rel="stylesheet" href="assets/css/noscript.css" />
-	</noscript>
-	<style>
-		p {
-			margin-left: 1em;
-			font-size: 2em;
-		}
+	<script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+	<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
+	<script src="assets/js/map.js"></script>
 
-		pre {
-			margin-left: 1em;
-			font-size: 2em;
-		}
-	</style>
 </head>
 
-<body class="is-preload">
-	<!-- Wrapper -->
-	<div id="wrapper">
+<body>
 
-		<!-- Header -->
-		<header id="header">
-			<div class="inner">
-				<!-- Logo -->
-				<a href="index.html" class="logo">
-					<span class="symbol"><img src="images/water-drop.png" alt="" /></span><span
-						class="title">水量監控系統</span>
-				</a>
-			</div>
-		</header>
-
-		<!-- Main -->
-		<div id="main">
-			<div class="inner">
-				<section>
-					<p>等候感應學生證...</p>
-				</section>
+	<!-- Header -->
+	<div class='p-5'>
+		<h1 class='text-center'>房地產搜尋系統</h1>
+		<div class='container-fluid' id='content'>
+			<div class='row justify-content-center '>
+				<button id='query-btn' class="btn btn-primary col-3 m-3">Query System</button>
+				<button id='rec-btn' class="btn btn-success col-3  m-3">Recommand System</button>
 			</div>
 		</div>
+	</div>
 
 	</div>
 
 	<!-- Scripts -->
-	<script src="assets/js/jquery.min.js"></script>
-	<script src="assets/js/browser.min.js"></script>
-	<script src="assets/js/breakpoints.min.js"></script>
-	<script src="assets/js/util.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
 	<script src="assets/js/main.js"></script>
 </body>
 
